--- a/Project1.dproj
+++ b/Project1.dproj
@@ -146,7 +146,7 @@
         <DCCReference Include="Application\DTO\Pessoa\uPessoa.Store.DTO.pas"/>
         <DCCReference Include="Application\DTO\Shared\uBase.DTO.pas"/>
         <DCCReference Include="Application\DTO\Pessoa\uPessoa.Show.DTO.pas"/>
-        <DCCReference Include="Application\UseCase\Pessoa\uPessoa.Show.UseCase.Interfaces.pas"/>
+        <DCCReference Include="Application\UseCase\Pessoa\Interfaces\uPessoa.Show.UseCase.Interfaces.pas"/>
         <DCCReference Include="Application\UseCase\Pessoa\uPessoa.Show.UseCase.pas"/>
         <DCCReference Include="Domain\Repository\Pessoa\uPessoa.Repository.Interfaces.pas"/>
         <DCCReference Include="Infra\Repository\Shared\uRepository.Factory.pas"/>
@@ -164,14 +164,14 @@
         <DCCReference Include="Vendor\ZLConnection\uZLScript.Interfaces.pas"/>
         <DCCReference Include="Infra\Repository\Shared\uConnection.Factory.pas"/>
         <DCCReference Include="Infra\Repository\Shared\uRepository.Factory.Interfaces.pas"/>
-        <DCCReference Include="Application\UseCase\Pessoa\uPessoa.StoreAndShow.UseCase.Interfaces.pas"/>
+        <DCCReference Include="Application\UseCase\Pessoa\Interfaces\uPessoa.StoreAndShow.UseCase.Interfaces.pas"/>
         <DCCReference Include="Application\UseCase\Pessoa\uPessoa.StoreAndShow.UseCase.pas"/>
         <DCCReference Include="Application\DTO\Pessoa\uPessoa.Update.DTO.pas"/>
-        <DCCReference Include="Application\UseCase\Pessoa\uPessoa.UpdateAndShow.UseCase.Interfaces.pas"/>
+        <DCCReference Include="Application\UseCase\Pessoa\Interfaces\uPessoa.UpdateAndShow.UseCase.Interfaces.pas"/>
         <DCCReference Include="Application\UseCase\Pessoa\uPessoa.UpdateAndShow.UseCase.pas"/>
-        <DCCReference Include="Application\UseCase\Pessoa\uPessoa.Delete.UseCase.Interfaces.pas"/>
+        <DCCReference Include="Application\UseCase\Pessoa\Interfaces\uPessoa.Delete.UseCase.Interfaces.pas"/>
         <DCCReference Include="Application\UseCase\Pessoa\uPessoa.Delete.UseCase.pas"/>
-        <DCCReference Include="Application\UseCase\Pessoa\uPessoa.Index.UseCase.Interfaces.pas"/>
+        <DCCReference Include="Application\UseCase\Pessoa\Interfaces\uPessoa.Index.UseCase.Interfaces.pas"/>
         <DCCReference Include="Application\UseCase\Pessoa\uPessoa.Index.UseCase.pas"/>
         <DCCReference Include="Infra\Shared\uRes.pas"/>
         <DCCReference Include="Infra\Shared\uApplication.Types.pas"/>
@@ -185,13 +185,13 @@
         <DCCReference Include="Domain\Entity\Pessoa\uEndereco.pas"/>
         <DCCReference Include="Vendor\SmartPointer\uSmartPointer.pas"/>
         <DCCReference Include="Application\DTO\Pessoa\uPessoa.StoreBatch.DTO.pas"/>
-        <DCCReference Include="Application\UseCase\Pessoa\uPessoa.StoreBatch.UseCase.Interfaces.pas"/>
+        <DCCReference Include="Application\UseCase\Pessoa\Interfaces\uPessoa.StoreBatch.UseCase.Interfaces.pas"/>
         <DCCReference Include="Application\UseCase\Pessoa\uPessoa.StoreBatch.UseCase.pas"/>
         <DCCReference Include="Domain\Repository\Tarefa\uTarefa.Repository.Interfaces.pas"/>
         <DCCReference Include="Infra\Repository\Tarefa\uTarefa.Repository.pas"/>
         <DCCReference Include="Domain\Entity\Tarefa\uTarefa.pas"/>
         <DCCReference Include="Domain\Entity\Tarefa\uTarefa.Status.Types.pas"/>
-        <DCCReference Include="Application\UseCase\Pessoa\uPessoa.UpdateAddressWithViaCep.UseCase.Interfaces.pas"/>
+        <DCCReference Include="Application\UseCase\Pessoa\Interfaces\uPessoa.UpdateAddressWithViaCep.UseCase.Interfaces.pas"/>
         <DCCReference Include="Application\UseCase\Pessoa\uPessoa.UpdateAddressWithViaCep.UseCase.pas"/>
         <DCCReference Include="Vendor\SearchZipCode\uSearchZipCode.Lib.pas"/>
         <DCCReference Include="Domain\Entity\Pessoa\uEnderecoIntegracao.pas"/>
